error corregido